Add footer on index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <header>
         <h1>Test Header</h1>
     </header>
+    <footer>
+        <a href="#">link to github</a>
+    </footer>
 </body>
 </html>
